Fixes responsive design on small screens

--- a/docs/styles/jsdoc.css
+++ b/docs/styles/jsdoc.css
@@ -133,7 +133,6 @@ tt, code, kbd, samp {
 
 #main {
   float: right;
-  min-width: 360px;
   width: calc(100% - 240px);
 }
 
@@ -629,7 +628,6 @@ span.param-type, .params td .param-type, .param-type dd {
 
   #main {
     width: 100%;
-    min-width: 360px;
   }
 
   #main h1.page-title {
